== 3.4.6 ==

* Fixed communication message subscription plan selection
* Fixed unexpected URL exclusion which leads to unexpected issues
* Fixed issue with not loaded custom templates for membership pages
* Fixed bug with wrongly added memberhsip pages to a query
* Fixed ability to access account page by unlogged users
* Fixed issue with left user information in the membership relationships table after user has been deleted
* Fixed issue with popup registration form when email address was not determined
* Fixed issue with not required invite code at BuddyPress registration page
* Fixed issue with invite codes which appears after each BuddyPress fields
* Fixed issue with not redirected page after 100% discount coupon was applied
* Fixed issue with empty page appeared after redirection to protected page
* Fixed issue with coupon used count incrementation when 100% discount coupon is used
* Fixed issue with broken subscription URLs at registration form when ?id= permalink is used
* Implemented ability to test rules in an URL group
* Implemented ability to sort subscription plans at front end
* Implemented deletion of the "user registration" subscription after first regular subscription is selected
* Reworked protection rules
* Reworked BuddyPress protection rules

== 3.4.5 ==

* Fixed URL Groups match issues
* Fixed issue with not removed invite codes when an option "Remove Code once used" is set to yes
* Fixed issue with broken links to levels and plans at membership dashboard (network wide)
* Fixed warnings and notices in level and subscription text widgets
* Fixed warnings and notices in login widget
* Fixed rendering issue with login widget and made it rendering as widget
* Fixed bug with infinite loop which appears if subscription period is set inappropriate
* Fixed issue with invalid redirect after enter a coupon code
* Implemented ability to add a title and "lost password" link to the login widget